Adjust font size (again) and correct footer spacing

--- a/src/theme/SearchBar/styles.module.css
+++ b/src/theme/SearchBar/styles.module.css
@@ -11,7 +11,7 @@
   height: 100%;
   width: 100%;
   justify-content: center;
-  font-size: 1.7rem;
+  font-size: 1.5rem;
   font-weight: 500;
   line-height: 1;
   -webkit-font-smoothing: antialiased;
